# delta-rfq-arena

./: .gitignore  Cargo.toml  README.md  RFC.md  mock-server.js  start.sh  test-flow.sh
.cargo/: config.toml
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs  maker.rs  taker.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/domain/: Cargo.toml  domain.yaml
crates/domain/examples/: local_laws_demo.rs
crates/domain/src/: api_types.rs  config.rs  endpoints.rs  main.rs  runtime.rs  state.rs
crates/domain/tests/: e2e_proof_flow.rs
crates/feeds/: Cargo.toml
crates/feeds/src/: lib.rs
crates/global-laws-stub/: Cargo.toml
crates/global-laws-stub/src/: main.rs
crates/local-laws/: Cargo.toml
crates/local-laws-elf/: Cargo.toml
crates/local-laws-elf/src/: main.rs
crates/local-laws/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: constraints.rs  feed.rs  fill.rs  lib.rs  quote.rs  receipt.rs
specs/: TESTNET-NEXT-STEP.md
web/: empty-module.mjs  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: agent-panel.tsx  aomi-chat.tsx  aomi-frame.tsx  providers.tsx  quote-card.tsx  quote-detail-dialog.tsx  quote-grid.tsx
web/src/components/assistant-ui/: attachment.tsx  markdown-text.tsx  thread-list.tsx  thread.tsx  threadlist-sidebar.tsx  tool-fallback.tsx  tooltip-icon-button.tsx
web/src/components/control-bar/: api-key-input.tsx  index.tsx  model-select.tsx  namespace-select.tsx  wallet-connect.tsx
web/src/components/test/: ThreadContextTest.tsx
web/src/components/tools/example-tool/: ExampleTool.tsx
web/src/components/ui/: accordion.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  drawer.tsx  input.tsx  label.tsx  notification.tsx  popover.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  sonner.tsx  tooltip.tsx
web/src/hooks/: use-quotes.ts
web/src/lib/: format.ts  wagmi.ts
web/src/types/: api.ts
