[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/local-laws",
    "crates/models",
    "crates/feeds",
    "crates/agents",
    "crates/compiler",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Delta SDK
delta_domain_sdk = { version = "=0.5.21", registry = "delta" }
delta_base_sdk = { version = "=0.5.21", registry = "delta" }
delta_local_laws = { version = "=0.5.21", registry = "delta" }
delta_serializers = { version = "=0.5.21", registry = "delta" }
delta_verifiable = { version = "=0.5.21", registry = "delta" }

# Internal crates
rfq-models = { path = "crates/models", default-features = false }
rfq-local-laws = { path = "crates/local-laws" }
rfq-compiler = { path = "crates/compiler" }
rfq-feeds = { path = "crates/feeds" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc", "clock", "std"] }

# UUID for quote IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Patch delta_proving_clients to fix conditional compilation issue
[patch."sparse+https://crates.repyhlabs.dev/api/v1/crates/"]
delta_proving_clients = { path = "patches/delta_proving_clients" }
