[package]
name = "rfq-agents"
version.workspace = true
edition.workspace = true

[dependencies]
rfq-models = { workspace = true }
rfq-feeds = { workspace = true }
delta_base_sdk = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
