[package]
name = "rfq-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
rfq-models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
