[package]
name = "rfq-domain"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rfq-domain"
path = "src/main.rs"

[[example]]
name = "local_laws_demo"
path = "examples/local_laws_demo.rs"

[dependencies]
rfq-models = { workspace = true }
rfq-local-laws = { workspace = true }
rfq-compiler = { workspace = true }
rfq-feeds = { workspace = true }

delta_domain_sdk = { workspace = true }
delta_base_sdk = { workspace = true }
delta_local_laws = { workspace = true }
delta_serializers = { workspace = true }
delta_verifiable = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
