[package]
name = "rfq-domain"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rfq-domain"
path = "src/main.rs"

[[example]]
name = "local_laws_demo"
path = "examples/local_laws_demo.rs"

[features]
default = ["mock"]
mock = []
testnet = ["delta_domain_sdk/sp1"]

[dependencies]
rfq-models = { workspace = true, features = ["std"] }
rfq-local-laws = { workspace = true, features = ["std", "delta-sdk"] }
rfq-compiler = { workspace = true }
rfq-feeds = { workspace = true }

delta_domain_sdk = { workspace = true }
delta_base_sdk = { workspace = true }
delta_local_laws = { workspace = true }
delta_serializers = { workspace = true }
delta_verifiable = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["std", "clock"] }
bincode = "1.3"
bs58 = "0.5"
